        - Removed silent JRE download and installation within PMS.exe wrapper if no private or public JREs are found. Prompt user to run PMS-setup-full.exe instead
        - Show user GPL licence during Windows installation
        - Windows installer now runs PS3 Media Server with normal user rights after installation is complete
        - Windows installer localization.
	- New Mac OSX installer with bundled JRE (pms-setup-macosx.tar.gz)

1.82.0 - 2013-06-03

    Engines:
        - dcraw Thumbnailer:
            - Fix image transcoding
            - Add support for more extensions
        - FFmpeg:
            - Fix bug that disabled FFmpeg for compatible files
            - Fix audio channel selection (thanks, valib)
        - MEncoder Video:
            - Fixed bug that caused embedded subtitles to be displayed instead of external (thanks, SubJunk)
            - Fixed handling of per-renderer aspect-ratio settings (thanks, ExSport)
        - tsMuxeR:
            - Fixed 24-bit FLAC support with tsMuxeR (thanks, SubJunk)
            - Fix bug that disabled tsMuxeR for compatible files
        - VLC:
            - Fix looping playback
            - Add multi-threading support (GC1624: thanks, ccampora)
        - Misc:
            - New engine: VLCWebVideo ("vlcwebvideo")
            - Clean up engine names

    Renderers:
        - PS3: TV series with sound problems after "previously on" block should now play normally with the "Keep AC-3 track" option enabled (thanks, SubJunk)

    Language updates:
        - Updated Dutch translation (thanks, leroy)

    Misc:
        - Fix issue with VirtualBox and PMS launchers (thanks, thepadawan42)
        - Added support for M4A files encoded with Fraunhofer AAC
        - Upgrade Thumbnailator to 0.4.4 to fix out-of-memory errors (thanks, coobird)

1.81.0 - 2013-04-21

    Engines:
        FFmpeg:
            - Add/fix audio channel options
            - Build script: add HTTPS support

    WEB.conf: