@@ -184,6 +184,24 @@ renderer_default =
 # Default: false
 renderer_force_default =
 
+# Set the string that contains a list of IP adresses and the renderer
+# profiles that should be forced to match for them. The comma separated
+# list contains pairs of a renderer name followed by "@" and an IP
+# address. The renderer name should match the value of the RendererName
+# property in a .conf file. The IP address can be specified as a range.
+# If there are multiple matches, the first that is found will be forced.
+#
+# Example: "Sony Bravia HX@192.168.1.34,Sony Bravia EX@192.168.0-1.*" will
+# use regular detection for a renderer connecting from "192.168.2.1" (as
+# there is no match), will force "Sony Bravia EX" for a renderer connecting
+# from "192.168.1.2" (match with the range) and will force "Sony Bravia HX"
+# for a renderer connecting from "192.168.1.34" (matches both entries, but
+# the HX was found first).
+#
+# Default: "", which means PMS will not force anything and use regular
+# detection.
+renderer_force_ip =
+
 # ---< Plugins >--------------------------------------------------------------
 
 # The directory where PMS can find the plugins.
