@@ -14,6 +14,7 @@
 
 # RendererName: Determines the name that is displayed in the PMS user
 # interface when this renderer connects.
+# Do not use "@" or "," in the name.
 RendererName = PlayStation 3
 
 # RendererIcon: Determines the icon that is displayed in the PMS user
