@@ -19,18 +19,30 @@
 
 package net.pms.configuration;
 
-import ch.qos.logback.classic.LoggerContext;
+import static net.pms.configuration.RendererConfiguration.getRendererConfigurationBySocketAddress;
+import static net.pms.configuration.RendererConfiguration.getRendererConfigurationByUA;
+import static net.pms.configuration.RendererConfiguration.getRendererConfigurationByUAAHH;
+import static net.pms.configuration.RendererConfiguration.loadRendererConfigurations;
+import static net.pms.configuration.RendererConfiguration.resetAddressAssociation;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+
+import java.net.InetAddress;
+import java.net.UnknownHostException;
+import java.util.HashMap;
+import java.util.Iterator;
+import java.util.Locale;
+import java.util.Map;
+import java.util.Map.Entry;
+import java.util.Set;
+
 import org.apache.commons.configuration.ConfigurationException;
 import org.junit.Before;
 import org.junit.Test;
 import org.slf4j.LoggerFactory;
 
-import java.util.*;
-import java.util.Map.Entry;
-
-import static net.pms.configuration.RendererConfiguration.*;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
+import ch.qos.logback.classic.LoggerContext;
 
 
 /**
@@ -233,4 +245,125 @@ public class RendererConfigurationTest {
 	    	}
     	}
     }
+
+    /**
+     * Test {@link RendererConfiguration#getRendererConfigurationBySocketAddress(InetAddress)}
+     * @throws UnknownHostException
+     */
+	@Test
+	public void testGetBySocketAddress() throws UnknownHostException {
+		RendererConfiguration conf = null;
+		PmsConfiguration pmsConf = null;
+
+		try {
+			pmsConf = new PmsConfiguration(false);
+		} catch (ConfigurationException e) {
+			// This should be impossible since no configuration file will be loaded.
+		}
+
+		// Initialize the RendererConfiguration
+		loadRendererConfigurations(pmsConf);
+
+		// Nothing forced
+		pmsConf.setRendererForceIp("");
+		resetAddressAssociation();
+		conf = getRendererConfigurationBySocketAddress(InetAddress.getByName("192.168.1.1"));
+		assertNull(conf);
+
+		// Garbled configuration: no renderer name
+		pmsConf.setRendererForceIp("@192.168.1.1");
+		resetAddressAssociation();
+		conf = getRendererConfigurationBySocketAddress(InetAddress.getByName("192.168.1.1"));
+		assertNull(conf);
+
+		// Garbled configuration: no IP address
+		pmsConf.setRendererForceIp("PlayStation 3");
+		resetAddressAssociation();
+		conf = getRendererConfigurationBySocketAddress(InetAddress.getByName("192.168.1.1"));
+		assertNull(conf);
+
+		// Garbled configuration: invalid IP address
+		pmsConf.setRendererForceIp("PlayStation 3@textip");
+		resetAddressAssociation();
+		conf = getRendererConfigurationBySocketAddress(InetAddress.getByName("192.168.1.1"));
+		assertNull(conf);
+
+		// Garbled configuration: unknown renderer name
+		pmsConf.setRendererForceIp("No Match@192.168.1.1");
+		resetAddressAssociation();
+		conf = getRendererConfigurationBySocketAddress(InetAddress.getByName("192.168.1.1"));
+		assertNull(conf);
+
+		// Garbled configuration: incorrect entries plus correct entry
+		pmsConf.setRendererForceIp("Sony Bravia EX,No Match@192.168.1.2,Playstation 3@192.168.1.1");
+		resetAddressAssociation();
+		conf = getRendererConfigurationBySocketAddress(InetAddress.getByName("192.168.1.2"));
+		assertNull(conf);
+		conf = getRendererConfigurationBySocketAddress(InetAddress.getByName("192.168.1.1"));
+		assertNotNull(conf);
+		assertEquals("PlayStation 3", conf.getRendererName());
+
+		// Set single forced IP address
+		pmsConf.setRendererForceIp("PlayStation 3@192.168.1.1");
+		resetAddressAssociation();
+		conf = getRendererConfigurationBySocketAddress(InetAddress.getByName("192.168.1.2"));
+		assertNull(conf);
+		conf = getRendererConfigurationBySocketAddress(InetAddress.getByName("192.168.1.1"));
+		assertNotNull(conf);
+		assertEquals("PlayStation 3", conf.getRendererName());
+
+		// Set forced IP address range
+		pmsConf.setRendererForceIp("PlayStation 3@192.168.1");
+		resetAddressAssociation();
+		conf = getRendererConfigurationBySocketAddress(InetAddress.getByName("192.168.1.1"));
+		assertNotNull(conf);
+		assertEquals("PlayStation 3", conf.getRendererName());
+		conf = getRendererConfigurationBySocketAddress(InetAddress.getByName("192.168.1.23"));
+		assertNotNull(conf);
+		assertEquals("PlayStation 3", conf.getRendererName());
+
+		// Set forced IP address range
+		pmsConf.setRendererForceIp("PlayStation 3@192.168.0-1.*");
+		resetAddressAssociation();
+		conf = getRendererConfigurationBySocketAddress(InetAddress.getByName("192.168.2.1"));
+		assertNull(conf);
+		conf = getRendererConfigurationBySocketAddress(InetAddress.getByName("192.168.0.1"));
+		assertNotNull(conf);
+		assertEquals("PlayStation 3", conf.getRendererName());
+		conf = getRendererConfigurationBySocketAddress(InetAddress.getByName("192.168.1.23"));
+		assertNotNull(conf);
+		assertEquals("PlayStation 3", conf.getRendererName());
+
+		// Set multiple forced IP addresses
+		pmsConf.setRendererForceIp("Sony Bravia EX@192.168.1.1,Sony Bravia HX@192.168.1.2");
+		resetAddressAssociation();
+		conf = getRendererConfigurationBySocketAddress(InetAddress.getByName("192.168.2.1"));
+		assertNull(conf);
+		conf = getRendererConfigurationBySocketAddress(InetAddress.getByName("192.168.1.1"));
+		assertNotNull(conf);
+		assertEquals("Sony Bravia EX", conf.getRendererName());
+		conf = getRendererConfigurationBySocketAddress(InetAddress.getByName("192.168.1.2"));
+		assertNotNull(conf);
+		assertEquals("Sony Bravia HX", conf.getRendererName());
+		
+		// Multiple addresses with range overlap
+		pmsConf.setRendererForceIp("Sony Bravia HX@192.168.1.2,Sony Bravia EX@192.168.0-1.*");
+		resetAddressAssociation();
+		conf = getRendererConfigurationBySocketAddress(InetAddress.getByName("192.168.2.1"));
+		assertNull(conf);
+		conf = getRendererConfigurationBySocketAddress(InetAddress.getByName("192.168.1.1"));
+		assertNotNull(conf);
+		assertEquals("Sony Bravia EX", conf.getRendererName());
+		conf = getRendererConfigurationBySocketAddress(InetAddress.getByName("192.168.1.2"));
+		assertNotNull(conf);
+		assertEquals("Sony Bravia HX", conf.getRendererName());
+
+		// Renderer name matching is case insensitive
+		pmsConf.setRendererForceIp("playstation 3@192.168.1.1");
+		resetAddressAssociation();
+		conf = getRendererConfigurationBySocketAddress(InetAddress.getByName("192.168.1.1"));
+		assertNotNull(conf);
+		assertEquals("PlayStation 3", conf.getRendererName());
+
+	}
 }
